--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <title>Game bóng nảy</title>
 </head>
 <body>
-<canvas id="game" width="500" height="500" style="border: 1px solid black" ></canvas>
+<img id="picture" src="https://i.pinimg.com/736x/21/26/1c/21261ca80a4b247c3614b4badc71cec4--art-background-game-art.jpg"
+     alt="Picture" width="500" height="500">
+<h1 style="color: red;font-family: cursive;">Game bóng nảy</h1>
+<canvas id="myCanvas" width="500" height="500" style="border: 1px solid black" ></canvas>
+<p><button onclick="myCanvas()">Chèn ảnh!</button></p>
 <h2>Luật chơi</h2>
 <p>Nhấn phím mũi tên trái/phải để di chuyển thanh chắn</p>
 <p>Bạn sẽ bị xử thua nếu như để cho quả bóng rơi hết đường biên ngang</p>
 <script src="game.js"></script>
+<script src="img.js"></script>
+
 </body>
 </html>
